mdapipkg/objects/TouchCRConnection__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>TouchCRConnection</label>
    <nameField>
        <label>TouchCRConnection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TouchCRConnections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>